--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,43 @@
+html, body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 :root {
   --grid-rows: 1;
   --grid-cols: 1;
+}
+
+.header {
+  text-align: center;
+}
+
+.main-container {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 #grid-container {
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
-  width: 500px;
-  height: 500px;
+  
 }
 
 .grid-item {
   border: 1px solid black;
-  padding: 1em;
+  padding: 5%;
   text-align: center;
+}
+
+.color-in {
+  background-color: black;
 }
