--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,13 @@ body {
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
+  width: 600px;
+  height: 600px;
 }
 
 .grid-item {
   border: 1px solid black;
-  padding: 10px;
+  user-select: none;
 }
 
 .range-output {
@@ -84,3 +86,4 @@ body {
 .color-in {
   background-color: black;
 }
+
