--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@ html, body {
 body {
   display: flex;
   flex-direction: column;
+  background-color: #372948;
 }
 
 :root {
   --grid-rows: 1;
   --grid-cols: 1;
+  --pen-color: black;
 }
 
 .header {
@@ -42,11 +44,17 @@ body {
   grid-template-columns: repeat(var(--grid-cols), 1fr);
   width: 600px;
   height: 600px;
+  border: 1px solid white;
 }
 
 .grid-item {
-  border: 1px solid black;
+  /* border: 1px solid white; */
   user-select: none;
+}
+
+.color-picker {
+  display: flex;
+  gap: 10px;
 }
 
 .range-output {
@@ -84,6 +92,6 @@ body {
 }
 
 .color-in {
-  background-color: black;
+  background-color: var(--pen-color);
 }
 
